--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,8 +7,8 @@
     outline: none;
     scroll-behavior: smooth;
     /*font-family: "Poppins", sans-serif;*/
-    /*font-family: -apple-system, BlinkMacSystemFont, sans-serif;*/
-    font-family: 'Plus Jakarta Sans', sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+    /*font-family: 'Plus Jakarta Sans', sans-serif;*/
 }
 :root{
     --bg-color: #080808;
