--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,7 +7,7 @@
     outline: none;
     scroll-behavior: smooth;
     /*font-family: "Poppins", sans-serif;*/
-    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+    font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
     /*font-family: 'Plus Jakarta Sans', sans-serif;*/
 }
 :root{
