--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -86,7 +86,7 @@ body{
     font-weight: 700;
     transition: 0.3s ease;
     border-bottom: 3px solid transparent;
-    font-family: 'Plus Jakarta Sans', sans-serif;
+    /*font-family: 'Plus Jakarta Sans', sans-serif;*/
 }
 .navmenu a:hover, .navmenu a.active{
     color: var(--main-color);
@@ -198,7 +198,7 @@ section{
     font-size: 4rem;
     font-weight: 750 !important;
     line-height: 1;
-    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+    /*font-family: -apple-system, BlinkMacSystemFont, sans-serif;*/
 }
 .text-home h5{
     font-size: 1.7rem;
