--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -86,7 +86,7 @@ body{
     font-weight: 700;
     transition: 0.3s ease;
     border-bottom: 3px solid transparent;
-    font-family: -apple-system, 'Plus Jakarta Sans', sans-serif;
+    font-family: 'Plus Jakarta Sans', sans-serif;
 }
 .navmenu a:hover, .navmenu a.active{
     color: var(--main-color);
