--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -431,11 +431,11 @@ span{
         margin: 0 20%;
     }
     .header{
-        justify-content: center;
+        justify-content: space-between;
     }
     .index{
         min-height: 100vh;
-        padding: 10rem 5% 8rem 5%;
+        padding: 10rem 15% 8rem 15%;
         display: flex;
         flex-direction: column;
         gap: 3rem;
@@ -498,11 +498,11 @@ span{
         margin: 0 20%;
     }
     .header{
-        justify-content: center;
+        justify-content: spacebetween;
     }
     .index{
         min-height: 100vh;
-        padding: 10rem 5% 8rem 5%;
+        padding: 10rem 15% 8rem 15%;
         display: flex;
         flex-direction: column;
         gap: 3rem;
