--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,6 +19,7 @@
 html{
     font-size: 60%;
     overflow-x: hidden;
+    background-image: linear-gradient(180deg, var(--second-bg-color), var(--text-color));
 }
 body{
     background: var(--bg-color);
@@ -429,8 +430,10 @@ span{
     body{
         width: 60%;
         margin: 0 20%;
+        background: transparent;
     }
     .header{
+        margin: 0 20% 0 0;
         justify-content: space-between;
     }
     .index{
@@ -496,6 +499,7 @@ span{
     body{
         width: 60%;
         margin: 0 20%;
+        background: transparent;
     }
     .header{
         justify-content: spacebetween;
