--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -425,6 +425,12 @@ span{
         font-size: 50%;
         overflow-x: hidden;
         background-image: linear-gradient(180deg, var(--second-bg-color), var(--text-color));
+        background-size: 100% 100vh;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+    }
+    .index, .about, .portfolio, .contact{
+        background: transparent;
     }
     body{
         padding: 0 20%;
@@ -496,6 +502,12 @@ span{
         font-size: 50%;
         overflow-x: hidden;
         background-image: linear-gradient(180deg, var(--second-bg-color), var(--text-color));
+        background-size: 100% 100vh;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+    }
+    .index, .about, .portfolio, .contact{
+        background: transparent;
     }
     body{
         padding: 0 20%;
