--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -430,7 +430,8 @@ span{
         background-attachment: fixed;
     }
     .index, .about, .portfolio, .contact{
-        background: transparent;
+        background: transparent !important;
+        background-color: none !important;
     }
     body{
         padding: 0 20%;
@@ -501,13 +502,14 @@ span{
     html{
         font-size: 50%;
         overflow-x: hidden;
-        background-image: linear-gradient(180deg, var(--second-bg-color), var(--text-color));
+        background-image: linear-gradient(180deg, #1C1C1E, var(--second-bg-color));
         background-size: 100% 100vh;
         background-repeat: no-repeat;
         background-attachment: fixed;
     }
     .index, .about, .portfolio, .contact{
-        background: transparent;
+        background: transparent !important;
+        background-color: none !important;
     }
     body{
         padding: 0 20%;
