--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -424,7 +424,7 @@ span{
     html{
         font-size: 50%;
         overflow-x: hidden;
-        background-image: linear-gradient(180deg, var(--second-bg-color), var(--text-color));
+        background-image: linear-gradient(180deg, #040404, var(--second-bg-color));
         background-size: 100% 100vh;
         background-repeat: no-repeat;
         background-attachment: fixed;
@@ -462,6 +462,13 @@ span{
     }
     .about span{
         color: var(--main-color);
+    }
+    .ed-and-ex{
+        box-shadow: 0 0 2px var(--text-color);
+    }
+    .ed-and-ex-box{
+        background-color: var(--text-color);
+        color: var(--second-bg-color);
     }
     .logo-certified p{
         max-width: 18rem;
@@ -510,7 +517,7 @@ span{
     html{
         font-size: 50%;
         overflow-x: hidden;
-        background-image: linear-gradient(180deg, #1C1C1E, var(--second-bg-color));
+        background-image: linear-gradient(180deg, #040404, var(--second-bg-color));
         background-size: 100% 100vh;
         background-repeat: no-repeat;
         background-attachment: fixed;
@@ -547,6 +554,13 @@ span{
     }
     .about span{
         color: var(--main-color);
+    }
+    .ed-and-ex{
+        box-shadow: 0 0 2px var(--text-color);
+    }
+    .ed-and-ex-box{
+        background-color: var(--text-color);
+        color: var(--second-bg-color);
     }
     .logo-certified p{
         max-width: 18rem;
