--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -499,22 +499,22 @@ span{
     }
     
     .project-box{
-        background-color: transparent;
+        background-color: transparent !important;
         color: var(--text-color);
         border: 1.5px solid var(--main-color);
     }
     .project-box h4{
         font-weight: 800;
-        color: var(--text-color);
+        color: var(--text-color) !important;
         background-color: transparent !important;
     }
     .tools h6{
         background-color: transparent !important;
-        color: var(--text-color);
+        color: var(--text-color) !important;
         border: 1px solid var(--main-color);
     }
     .project-box p{
-        color: var(--text-color);
+        color: var(--text-color) !important;
     }
     .contact h2{
         justify-content: center;
@@ -610,22 +610,22 @@ span{
         justify-content: center !important;
     }
     .project-box{
-        background-color: transparent;
+        background-color: transparent !important;
         color: var(--text-color);
         border: 1.5px solid var(--main-color);
     }
     .project-box h4{
         font-weight: 800;
-        color: var(--text-color);
+        color: var(--text-color) !important;
         background-color: transparent !important;
     }
     .tools h6{
         background-color: transparent !important;
-        color: var(--text-color);
+        color: var(--text-color) !important;
         border: 1px solid var(--main-color);
     }
     .project-box p{
-        color: var(--text-color);
+        color: var(--text-color) !important;
     }
     .contact h2{
         justify-content: center;
